# mouse_chaser

./: README.md  local.properties
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/SDL2_image/: CMakeLists.txt
app/jni/src/: Android.mk  CMakeLists.txt  project_main.cpp
app/jni/src/objects/base_object/: base_object.cpp  base_object.h
app/jni/src/objects/composite/: game_element_set.cpp  i_game_element.h
app/jni/src/objects/mouse/: mouse.cpp  mouse.h
app/jni/src/scenario/: i_scenario.h  scenario.cpp  scenario.h
app/jni/src/sound_effects/: sound_effects.cpp  sound_effects.h
app/src/main/java/org/libsdl/app/: SDLActivity.java
